--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 <ul class="nav" id="nav">
                 
                 <li class="on">
-                    <span></span><a href="http://migang.gitee.io/mgrs/" class="hidden-xs">首页</a>
+                    <span></span><a href="https://aihong-mg.github.io/" class="hidden-xs">首页</a>
                 </li>
-				<li class=""><span></span><a href="http://migang.gitee.io/mgrs/gszz.html">公司简介</a></li>
+				<li class=""><span></span><a href="https://aihong-mg.github.io/gszz.html">公司简介</a></li>
             </ul>
         </div>
     </div>
