--- a/gszz.html
+++ b/gszz.html
@@ -106,9 +106,9 @@
 <ul class="nav" id="nav">
                 
                 <li class="">
-                    <span></span><a href=https://gitee.com/migang/mgrs" class="hidden-xs">首页</a>
+                    <span></span><a href=https://aihong-mg.github.io" class="hidden-xs">首页</a>
                 </li>
-				<li class="on"><span></span><a href="https://gitee.com/migang/mgrs/gszz.html">公司简介</a></li>
+				<li class="on"><span></span><a href="https://aihong-mg.github.io/gszz.html">公司简介</a></li>
 				<!--
                <li class=""><span></span><a href="https://www.bmob.cn/shop/index">源码</a></li>
                 <li class=""><span></span><a href="https://www.bmob.cn/prices">价格</a></li>
