--- a/gszz.html
+++ b/gszz.html
@@ -106,7 +106,7 @@
 <ul class="nav" id="nav">
                 
                 <li class="">
-                    <span></span><a href=https://aihong-mg.github.io" class="hidden-xs">首页</a>
+                    <span></span><a href="https://aihong-mg.github.io" class="hidden-xs">首页</a>
                 </li>
 				<li class="on"><span></span><a href="https://aihong-mg.github.io/gszz.html">公司简介</a></li>
 				<!--
